# gemma4-vllm

./: .gitignore  Dockerfile  QUANTIZE.md  README.md  docker-compose.yml  download-model.py  gemma4-pod.yml  main.py  pod.sh  podman-compose.yml  pyproject.toml  quantize-awq.py  quantize-gptq.py  quantize.py  serve.sh  service.sh  test_tool_call.py
