[project]
name = "gemma4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "bitsandbytes>=0.49.2",
    "openai>=2.30.0",
    "vllm>=0.19.0",
]

[tool.uv]
override-dependencies = [
    "transformers @ git+https://github.com/huggingface/transformers.git",
]
